api: terminate and update via put
