# pkg/api/rest/operations/update_cluster_parameters.go
@@ -18,18 +18,18 @@ import (
 	"github.com/sapcc/kubernikus/pkg/api/models"
 )
 
-// NewPatchClusterParams creates a new PatchClusterParams object
+// NewUpdateClusterParams creates a new UpdateClusterParams object
 // with the default values initialized.
-func NewPatchClusterParams() PatchClusterParams {
+func NewUpdateClusterParams() UpdateClusterParams {
 	var ()
-	return PatchClusterParams{}
+	return UpdateClusterParams{}
 }
 
-// PatchClusterParams contains all the bound params for the patch cluster operation
+// UpdateClusterParams contains all the bound params for the update cluster operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters PatchCluster
-type PatchClusterParams struct {
+// swagger:parameters UpdateCluster
+type UpdateClusterParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request
@@ -49,7 +49,7 @@ type PatchClusterParams struct {
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls
-func (o *PatchClusterParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+func (o *UpdateClusterParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 	o.HTTPRequest = r
 
@@ -88,7 +88,7 @@ func (o *PatchClusterParams) BindRequest(r *http.Request, route *middleware.Matc
 	return nil
 }
 
-func (o *PatchClusterParams) bindName(rawData []string, hasKey bool, formats strfmt.Registry) error {
+func (o *UpdateClusterParams) bindName(rawData []string, hasKey bool, formats strfmt.Registry) error {
 	var raw string
 	if len(rawData) > 0 {
 		raw = rawData[len(rawData)-1]
@@ -103,7 +103,7 @@ func (o *PatchClusterParams) bindName(rawData []string, hasKey bool, formats str
 	return nil
 }
 
-func (o *PatchClusterParams) validateName(formats strfmt.Registry) error {
+func (o *UpdateClusterParams) validateName(formats strfmt.Registry) error {
 
 	return nil
 }
